feat: 添加 Vercel Speed Insights
- 使用 CDN 方式引入 Speed Insights
- 更新 Vercel 配置文件
- 添加性能数据收集端点
- 移除 npm 相关配置
- 优化路由配置

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
         "use": "@vercel/python"
     }],
     "routes": [{
-            "src": "/_vercel/speed-insights/script\\.js",
-            "dest": "/_vercel/speed-insights/script.js"
+            "src": "/_vercel/insights/script.js",
+            "dest": "/_vercel/insights/script.js"
         },
         {
             "src": "/(.*)",
